remove erroneus build.gradle change